﻿# The history of Typaste

## English

- 2019-08-07 ver.0.5.1 First release.
- 2019-08-14 ver.0.5.2 Added "Open ReadMe".
- 2023-11-14 ver.0.5.3 Added sounds. Added "Delay to start".

## Japanese (日本語)

- 2019-08-07 ver.0.5.1 初公開。
- 2019-08-14 ver.0.5.2「ReadMe を開く」を追加。
- 2023-11-14 ver.0.5.3 音声を追加。開始遅延を追加。