@@ -1,5 +1,5 @@
 // Typaste_res.rc
-// This file is automatically generated by RisohEditor 5.7.8.
+// This file is automatically generated by RisohEditor 5.8.1.
 // † <-- This dagger helps UTF-8 detection.
 
 #include "resource.h"
