@@ -1,4 +1,4 @@
-// This file is automatically generated by RisohEditor 5.7.8.
+// This file is automatically generated by RisohEditor 5.8.1.
 // † <-- This dagger helps UTF-8 detection.
 
 #pragma code_page(65001) // UTF-8
@@ -24,7 +24,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_DEFAULT
 // RT_DIALOG
 
 1 DIALOG 0, 0, 210, 135
-CAPTION "Typaste version 0.5.3 by katahiromz"
+CAPTION "Typaste version 0.5.4 by katahiromz"
 STYLE DS_CENTER | DS_MODALFRAME | WS_POPUPWINDOW | WS_CAPTION | WS_MINIMIZEBOX
 FONT 9, "Tahoma"
 {
@@ -35,7 +35,7 @@ FONT 9, "Tahoma"
     PUSHBUTTON "E&xit", IDCANCEL, 145, 115, 60, 14
 }
 
-2 DIALOG 0, 0, 230, 120
+2 DIALOG 0, 0, 230, 140
 CAPTION "Typaste Settings"
 STYLE DS_CENTER | DS_MODALFRAME | WS_POPUPWINDOW | WS_CAPTION
 FONT 9, "Tahoma"
@@ -50,9 +50,11 @@ FONT 9, "Tahoma"
     CONTROL "", edt2, "msctls_hotkey32", 0, 85, 45, 70, 15
     LTEXT "&Sound:", -1, 5, 65, 40, 10
     COMBOBOX cmb1, 50, 65, 175, 300, CBS_NOINTEGRALHEIGHT | CBS_HASSTRINGS | CBS_AUTOHSCROLL | CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON "&Browse...", psh2, 165, 80, 60, 15
-    DEFPUSHBUTTON "OK", IDOK, 45, 100, 60, 15
-    PUSHBUTTON "Cancel", IDCANCEL, 120, 100, 60, 15
+    PUSHBUTTON "&Browse...", psh2, 50, 80, 60, 15
+    PUSHBUTTON "&Play", psh3, 165, 80, 60, 15
+    AUTOCHECKBOX "Control &IME On/Off", chx1, 5, 100, 110, 15
+    DEFPUSHBUTTON "OK", IDOK, 45, 120, 60, 15
+    PUSHBUTTON "Cancel", IDCANCEL, 120, 120, 60, 15
 }
 
 //////////////////////////////////////////////////////////////////////////////
@@ -62,7 +64,7 @@ STRINGTABLE
 {
     IDS_README, "\\README.txt"
     IDS_DELETESETTINGS, "Do you want to delete Typaste settings?"
-    IDS_TITLETEXT, "Typaste version 0.5.3 by katahiromz"
+    IDS_TITLETEXT, "Typaste version 0.5.4 by katahiromz"
 }
 
 //////////////////////////////////////////////////////////////////////////////
