@@ -1,4 +1,4 @@
-// This file is automatically generated by RisohEditor 5.7.8.
+// This file is automatically generated by RisohEditor 5.8.1.
 // † <-- This dagger helps UTF-8 detection.
 
 #pragma code_page(65001) // UTF-8
@@ -9,7 +9,7 @@ LANGUAGE LANG_JAPANESE, SUBLANG_DEFAULT
 // RT_DIALOG
 
 1 DIALOG 0, 0, 210, 135
-CAPTION "Typaste version 0.5.3 by 片山博文MZ"
+CAPTION "Typaste version 0.5.4 by 片山博文MZ"
 STYLE DS_CENTER | DS_MODALFRAME | WS_POPUPWINDOW | WS_CAPTION | WS_MINIMIZEBOX
 FONT 9, "MS UI Gothic"
 {
@@ -20,7 +20,7 @@ FONT 9, "MS UI Gothic"
     PUSHBUTTON "終了(&X)", IDCANCEL, 145, 115, 60, 14
 }
 
-2 DIALOG 0, 0, 230, 120
+2 DIALOG 0, 0, 230, 140
 CAPTION "Typaste 設定"
 STYLE DS_CENTER | DS_MODALFRAME | WS_POPUPWINDOW | WS_CAPTION
 FONT 9, "MS UI Gothic"
@@ -35,9 +35,11 @@ FONT 9, "MS UI Gothic"
     CONTROL "", edt2, "msctls_hotkey32", 0, 85, 45, 70, 15
     LTEXT "音声(&S):", -1, 5, 65, 40, 10
     COMBOBOX cmb1, 50, 65, 175, 300, CBS_NOINTEGRALHEIGHT | CBS_HASSTRINGS | CBS_AUTOHSCROLL | CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON "参照(&B)...", psh2, 165, 80, 60, 15
-    DEFPUSHBUTTON "OK", IDOK, 45, 100, 60, 15
-    PUSHBUTTON "キャンセル", IDCANCEL, 120, 100, 60, 15
+    PUSHBUTTON "参照(&B)...", psh2, 50, 80, 60, 15
+    PUSHBUTTON "音声の再生(&P)", psh3, 165, 80, 60, 15
+    AUTOCHECKBOX "&IME のオン／オフを制御", chx1, 5, 100, 110, 15
+    DEFPUSHBUTTON "OK", IDOK, 45, 120, 60, 15
+    PUSHBUTTON "キャンセル", IDCANCEL, 120, 120, 60, 15
 }
 
 //////////////////////////////////////////////////////////////////////////////
@@ -47,7 +49,7 @@ STRINGTABLE
 {
     IDS_README, "\\READMEJP.txt"
     IDS_DELETESETTINGS, "設定を削除しますか？"
-    IDS_TITLETEXT, "Typaste version 0.5.3 by 片山博文MZ"
+    IDS_TITLETEXT, "Typaste version 0.5.4 by 片山博文MZ"
 }
 
 //////////////////////////////////////////////////////////////////////////////
