@@ -1,6 +1,6 @@
 //{{NO_DEPENDENCIES}}
 // Microsoft Visual C++ Compatible
-// This file is automatically generated by RisohEditor 5.7.8.
+// This file is automatically generated by RisohEditor 5.8.1.
 // Typaste_res.rc
 
 #define IDS_README                          100
